2004-08-24  John Luke  <john.luke@gmail.com>

	* gtk/Makefile.am: add Menu.custom
	* gtk/Menu.custom: new custom for Popup () overload
	[Fixes #60668]
	* rsvg/Pixbuf.custom: new custom file
	* rsvg/Makefile.am: add Pixbuf.custom to build
	* rsvg/Tool.cs: remove double ; that cause warnings
	* rsvg/rsvg-sharp.pc.in: add Requires: gtk-sharp art-sharp

2004-08-24  Larry Ewing  <lewing@ximian.com>

	* gdk/Pixbuf.custom : add RenderThresholdAlpha overload which defaults
	to the entire pixbuf width/height.
	[Fixes #60703]

2004-08-24  Mike Kestner  <mkestner@ximian.com>

	* gdk/Drawable.custom : add a DrawPolygon overload with bool filled
	and mark the old int filled overload Obsolete.
	[Fixes #60702]

2004-08-20  Mike Kestner  <mkestner@ximian.com>

	* atk/Atk.metadata : mark an array param on Relation ctor.

2004-08-19  Borja Sanchez Zamorano  <borsanza@yahoo.es>

	* gtk/Gtk.metadata : hide some methods on TextBuffer.
	* gtk/TextBuffer.custom : pass -1 for the text length to some
	more methods.

2004-08-18  John Luke  <john.luke@gmail.com>

	* AUTHORS: fix my name
	* glade/XML.custom: remove doc comments (in monodoc)
	add overload ctor for the most common case so far
	[Fixes #62238]

2004-08-18  John Luke  <john.luke@gmail.com>

	* pango/Pango.metadata : hide a couple methods on Layout.
	* pango/Layout.custom : impl SetText and SetMarkup w/ length=-1.
	[Fixes #63057]

2004-08-18  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : unhide ExpanderStyle.
	* doc/en/Gtk/Style.xml : doc PaintExpander.
	* doc/en/Gtk/ExpanderStyle.xml : new enum docs.
	[Fixes #60480] metadata patch from Jeroen Zwartepoorte.

2004-08-17  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : metadata for the pango audit.
	* pango/*.custom : customizations to fix audited API.
	* doc/en/* : docs for some api changes and additions.
	* glib/Marshaller.cs : some gunichar marshal-fu.
	* glib/glue/unichar.c : a new glue method.

2004-08-13  John Luke  <john.luke@gmail.com>
