@@ -991,39 +991,6 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="PaintPolygon">
-      <MemberSignature Language="C#" Value="public static void PaintPolygon (Gtk.Style style, Gdk.Window window, Gtk.StateType state_type, Gtk.ShadowType shadow_type, Gdk.Rectangle area, Gtk.Widget widget, string detail, Gdk.Point points, int npoints, bool fill);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="style" Type="Gtk.Style" />
-        <Parameter Name="window" Type="Gdk.Window" />
-        <Parameter Name="state_type" Type="Gtk.StateType" />
-        <Parameter Name="shadow_type" Type="Gtk.ShadowType" />
-        <Parameter Name="area" Type="Gdk.Rectangle" />
-        <Parameter Name="widget" Type="Gtk.Widget" />
-        <Parameter Name="detail" Type="System.String" />
-        <Parameter Name="points" Type="Gdk.Point" />
-        <Parameter Name="npoints" Type="System.Int32" />
-        <Parameter Name="fill" Type="System.Boolean" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="style">a <see cref="T:Gtk.Style" /></param>
-        <param name="window">a <see cref="T:Gdk.Window" /></param>
-        <param name="state_type">a <see cref="T:Gtk.StateType" /></param>
-        <param name="shadow_type">a <see cref="T:Gtk.ShadowType" /></param>
-        <param name="area">a <see cref="T:Gdk.Rectangle" /></param>
-        <param name="widget">a <see cref="T:Gtk.Widget" /></param>
-        <param name="detail">a <see cref="T:System.String" /></param>
-        <param name="points">a <see cref="T:Gdk.Point" /></param>
-        <param name="npoints">a <see cref="T:System.Int32" /></param>
-        <param name="fill">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="PaintHandle">
       <MemberSignature Language="C#" Value="public static void PaintHandle (Gtk.Style style, Gdk.Window window, Gtk.StateType state_type, Gtk.ShadowType shadow_type, Gdk.Rectangle area, Gtk.Widget widget, string detail, int x, int y, int width, int height, Gtk.Orientation orientation);" />
       <MemberType>Method</MemberType>
@@ -1285,6 +1252,38 @@
         <param name="x">a <see cref="T:System.Int32" /></param>
         <param name="y">a <see cref="T:System.Int32" /></param>
         <param name="expander_style">a <see cref="T:System.Int32" /></param>
+        <remarks>
+        </remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="PaintPolygon">
+      <MemberSignature Language="C#" Value="public static void PaintPolygon (Gtk.Style style, Gdk.Window window, Gtk.StateType state_type, Gtk.ShadowType shadow_type, Gdk.Rectangle area, Gtk.Widget widget, string detail, Gdk.Point[] points, bool fill);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="style" Type="Gtk.Style" />
+        <Parameter Name="window" Type="Gdk.Window" />
+        <Parameter Name="state_type" Type="Gtk.StateType" />
+        <Parameter Name="shadow_type" Type="Gtk.ShadowType" />
+        <Parameter Name="area" Type="Gdk.Rectangle" />
+        <Parameter Name="widget" Type="Gtk.Widget" />
+        <Parameter Name="detail" Type="System.String" />
+        <Parameter Name="points" Type="Gdk.Point[]" />
+        <Parameter Name="fill" Type="System.Boolean" />
+      </Parameters>
+      <Docs>
+        <summary>Paint a polygon.</summary>
+        <param name="style">a <see cref="T:Gtk.Style" /></param>
+        <param name="window">a <see cref="T:Gdk.Window" /></param>
+        <param name="state_type">a <see cref="T:System.Int32" /></param>
+        <param name="shadow_type">a <see cref="T:System.Int32" /></param>
+        <param name="area">a <see cref="T:Gdk.Rectangle" /></param>
+        <param name="widget">a <see cref="T:Gtk.Widget" /></param>
+        <param name="detail">a <see cref="T:System.String" /></param>
+        <param name="points">a <see cref="T:Gdk.Point" /></param>
+        <param name="fill">a <see cref="T:System.Boolean" /></param>
         <remarks>
         </remarks>
       </Docs>
