@@ -31,6 +31,8 @@
   <attr path="/api/namespace/class[@cname='GtkGlobal']/method[@name='EventsPending']/return-type" name="type">gboolean</attr>
   <attr path="/api/namespace/class[@cname='GtkGlobal']/method[@name='EventsPending']" name="name">GetEventsPending</attr>
   <attr path="/api/namespace/class[@cname='GtkGlobal']/method[@name='CheckVersion']/return-type" name="type">const-gchar*</attr>
+  <attr path="/api/namespace/class[@cname='GtkGlobal']/method[@name='PaintPolygon']/*/*[@name='points']" name="array">1</attr>
+  <attr path="/api/namespace/class[@cname='GtkGlobal']/method[@name='PaintPolygon']/*/*[@name='npoints']" name="name">n_points</attr>
   <attr path="/api/namespace/class[@cname='GtkIdle_']" name="hidden">1</attr>
   <attr path="/api/namespace/class[@cname='GtkStock_']" name="name">StockManager</attr>
   <attr path="/api/namespace/class[@cname='GtkStock_']/method[@name='ListIds']" name="hidden">1</attr>
