@@ -2,6 +2,7 @@
 
 	* en/Gdk/Drawable.xml : add DrawPolygon overload and doc both.
 	* en/Gdk/Pixbuf.xml : add RenderThresholdAlpha overload docs.
+	* en/Gtk/Style.xml : fix signature of PaintPolygon.
 
 2004-08-22  Shane Landrum <epicene@pobox.com>
 
