@@ -1,3 +1,7 @@
+2004-08-24  Larry Ewing  <lewing@ximian.com>
+
+	* gtk/Gtk.metadata : Style.PaintPolygon has an array of points.
+
 2004-08-24  John Luke  <john.luke@gmail.com>
 
 	* gtk/Makefile.am: add Menu.custom
